# openvswitch-windows-port

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Makefile.in  OVS_Port.sln  README.Windows  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  aclocal.m4  cmake_install.cmake  config.h.in  config.h.unix  configure  package.m4  run_batch.sh
tests/: CMakeLists.txt  cmake_install.cmake  file2  file3  idltest.c  test-aes128.c  test-aes128.vcxproj  test-aes128.vcxproj.filters  test-bundle.vcxproj  test-bundle.vcxproj.filters  test-byte-order.vcxproj  test-byte-order.vcxproj.filters  test-classifier.c  test-classifier.vcxproj  test-classifier.vcxproj.filters  test-csum.vcxproj  test-csum.vcxproj.filters  test-file_name.vcxproj  test-file_name.vcxproj.filters  test-flows.c  test-flows.vcxproj  test-flows.vcxproj.filters  test-hash.vcxproj  test-hash.vcxproj.filters  test-heap.vcxproj  test-heap.vcxproj.filters  test-hmap.vcxproj  test-hmap.vcxproj.filters  test-json.vcxproj  test-json.vcxproj.filters  test-jsonrpc.c  test-jsonrpc.vcxproj  test-jsonrpc.vcxproj.filters  test-list.vcxproj  test-list.vcxproj.filters  test-lockfile.c  test-lockfile.vcxproj  test-lockfile.vcxproj.filters  test-multipath.vcxproj  test-multipath.vcxproj.filters  (+33 more)
tests/Debug/: actions.txt  flows  input_reconn  odp.txt  pcap  t  t.txt  temp.txt  test-aes.bat  test-aes128.ilk  test-bundle.ilk  test-byte-order.ilk  test-classifier.ilk  test-csum.ilk  test-file_name.ilk  test-flows.ilk  test-hash.ilk  test-heap.ilk  test-hmap.ilk  test-json.exp  test-json.ilk  test-json.lib  test-jsonrpc.exp  test-jsonrpc.ilk  test-jsonrpc.lib  test-list.ilk  test-lockfile.ilk  test-multipath.ilk  test-netflow.exp  test-netflow.ilk  test-netflow.lib  test-odp.ilk  test-ovsdb.exp  test-ovsdb.ilk  test-ovsdb.lib  test-packets.ilk  test-random.ilk  test-reconnect.ilk  test-sha1.ilk  test-stp-iol-op-3.4.STP  (+14 more)
tests/test-aes128.dir/Debug/test-aes128.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/test-bundle.dir/Debug/test-bundle.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/test-byte-order.dir/Debug/test-byte-order.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/test-classifier.dir/Debug/test-classifier.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/test-csum.dir/Debug/test-csum.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/test-file_name.dir/Debug/test-file_name.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/test-flows.dir/Debug/test-flows.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/test-hash.dir/Debug/test-hash.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/test-heap.dir/Debug/test-heap.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/test-hmap.dir/Debug/test-hmap.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/test-json.dir/Debug/test-json.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test-json.write.1u.tlog
tests/test-jsonrpc.dir/Debug/test-jsonrpc.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test-jsonrpc.write.1u.tlog
tests/test-list.dir/Debug/test-list.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/test-lockfile.dir/Debug/test-lockfile.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/test-multipath.dir/Debug/test-multipath.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/test-netflow.dir/Debug/test-netflow.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test-netflow.write.1u.tlog
tests/test-odp.dir/Debug/test-odp.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/test-ovsdb.dir/Debug/test-ovsdb.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test-ovsdb.write.1u.tlog
tests/test-packets.dir/Debug/test-packets.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/test-random.dir/Debug/test-random.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/test-reconnect.dir/Debug/test-reconnect.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/test-sha1.dir/Debug/test-sha1.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/test-stp.dir/Debug/test-stp.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/test-strtok_r.dir/Debug/test-strtok_r.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/test-type-props.dir/Debug/test-type-props.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/test-unix-socket.dir/Debug/test-unix-socket.tlog/: CL.read.1.tlog  (+5 more)
(+408 files in other folders)
